// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`syntactic parser large document (snapshot test) 1`] = `
{
  "_kind": "Document",
  "definitions": [
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "r",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "g",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "b",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Color",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cx",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cy",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "r",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fill",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "Color",
              },
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "stroke",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Color",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "third",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "ObjectLiteralType",
              "fields": [
                {
                  "_kind": "FieldDef",
                  "leadingComment": null,
                  "name": {
                    "_kind": "Identifier",
                    "name": "r",
                  },
                  "optional": false,
                  "trailingComment": null,
                  "type": {
                    "_kind": "NumberType",
                  },
                },
                {
                  "_kind": "FieldDef",
                  "leadingComment": null,
                  "name": {
                    "_kind": "Identifier",
                    "name": "g",
                  },
                  "optional": false,
                  "trailingComment": null,
                  "type": {
                    "_kind": "NumberType",
                  },
                },
                {
                  "_kind": "FieldDef",
                  "leadingComment": null,
                  "name": {
                    "_kind": "Identifier",
                    "name": "b",
                  },
                  "optional": false,
                  "trailingComment": null,
                  "type": {
                    "_kind": "NumberType",
                  },
                },
              ],
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Circle",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Foo",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "version",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "version",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "NumberType",
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "mycircle",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": true,
            "ref": {
              "_kind": "TypeName",
              "name": "Bar",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "someField",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "_undefinedThing_",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "list",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "LiveListType",
            "ofType": {
              "_kind": "LiveMapType",
              "keyType": {
                "_kind": "ArrayType",
                "ofType": {
                  "_kind": "NumberType",
                },
              },
              "valueType": {
                "_kind": "LiveListType",
                "ofType": {
                  "_kind": "ArrayType",
                  "ofType": {
                    "_kind": "ArrayType",
                    "ofType": {
                      "_kind": "TypeRef",
                      "asLiveObject": false,
                      "ref": {
                        "_kind": "TypeName",
                        "name": "Bar",
                      },
                    },
                  },
                },
              },
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Foo",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "abc",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "a",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "StringType",
              },
              {
                "_kind": "NumberType",
              },
              {
                "_kind": "ArrayType",
                "ofType": {
                  "_kind": "NumberType",
                },
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "b",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "UnionType",
              "members": [
                {
                  "_kind": "StringType",
                },
                {
                  "_kind": "NumberType",
                },
                {
                  "_kind": "NumberType",
                },
              ],
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "c",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "StringType",
              },
              {
                "_kind": "NumberType",
              },
              {
                "_kind": "NumberType",
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "d",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "StringType",
              },
              {
                "_kind": "NumberType",
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "e",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "StringType",
              },
              {
                "_kind": "NumberType",
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "f",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "StringType",
              },
              {
                "_kind": "NumberType",
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "g",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "NullType",
              },
              {
                "_kind": "NumberType",
              },
              {
                "_kind": "StringType",
              },
            ],
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Unions",
      },
    },
  ],
}
`;

exports[`syntactic parser large legacy document (snapshot test) 1`] = `
{
  "_kind": "Document",
  "definitions": [
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "r",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Int",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "g",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Int",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "b",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Int",
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Color",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cx",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Float",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "cy",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Float",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "r",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Float",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "fill",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "TypeRef",
              "asLiveObject": false,
              "ref": {
                "_kind": "TypeName",
                "name": "Color",
              },
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "stroke",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Color",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "third",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "ObjectLiteralType",
              "fields": [
                {
                  "_kind": "FieldDef",
                  "leadingComment": null,
                  "name": {
                    "_kind": "Identifier",
                    "name": "r",
                  },
                  "optional": false,
                  "trailingComment": null,
                  "type": {
                    "_kind": "TypeRef",
                    "asLiveObject": false,
                    "ref": {
                      "_kind": "TypeName",
                      "name": "Int",
                    },
                  },
                },
                {
                  "_kind": "FieldDef",
                  "leadingComment": null,
                  "name": {
                    "_kind": "Identifier",
                    "name": "g",
                  },
                  "optional": false,
                  "trailingComment": null,
                  "type": {
                    "_kind": "TypeRef",
                    "asLiveObject": false,
                    "ref": {
                      "_kind": "TypeName",
                      "name": "Int",
                    },
                  },
                },
                {
                  "_kind": "FieldDef",
                  "leadingComment": null,
                  "name": {
                    "_kind": "Identifier",
                    "name": "b",
                  },
                  "optional": false,
                  "trailingComment": null,
                  "type": {
                    "_kind": "TypeRef",
                    "asLiveObject": false,
                    "ref": {
                      "_kind": "TypeName",
                      "name": "Int",
                    },
                  },
                },
              ],
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Circle",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Foo",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "version",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Int",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "version",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "Int",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "mycircle",
          },
          "optional": true,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": true,
            "ref": {
              "_kind": "TypeName",
              "name": "Bar",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "someField",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "TypeRef",
            "asLiveObject": false,
            "ref": {
              "_kind": "TypeName",
              "name": "_undefinedThing_",
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "list",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "LiveListType",
            "ofType": {
              "_kind": "LiveMapType",
              "keyType": {
                "_kind": "ArrayType",
                "ofType": {
                  "_kind": "TypeRef",
                  "asLiveObject": false,
                  "ref": {
                    "_kind": "TypeName",
                    "name": "Int",
                  },
                },
              },
              "valueType": {
                "_kind": "LiveListType",
                "ofType": {
                  "_kind": "ArrayType",
                  "ofType": {
                    "_kind": "ArrayType",
                    "ofType": {
                      "_kind": "TypeRef",
                      "asLiveObject": false,
                      "ref": {
                        "_kind": "TypeName",
                        "name": "Bar",
                      },
                    },
                  },
                },
              },
            },
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Foo",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "abc",
      },
    },
    {
      "_kind": "ObjectTypeDefinition",
      "fields": [
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "a",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "String",
                },
              },
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Int",
                },
              },
              {
                "_kind": "ArrayType",
                "ofType": {
                  "_kind": "TypeRef",
                  "asLiveObject": false,
                  "ref": {
                    "_kind": "TypeName",
                    "name": "Int",
                  },
                },
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "b",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "ArrayType",
            "ofType": {
              "_kind": "UnionType",
              "members": [
                {
                  "_kind": "TypeRef",
                  "asLiveObject": false,
                  "ref": {
                    "_kind": "TypeName",
                    "name": "String",
                  },
                },
                {
                  "_kind": "TypeRef",
                  "asLiveObject": false,
                  "ref": {
                    "_kind": "TypeName",
                    "name": "Int",
                  },
                },
                {
                  "_kind": "TypeRef",
                  "asLiveObject": false,
                  "ref": {
                    "_kind": "TypeName",
                    "name": "Int",
                  },
                },
              ],
            },
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "c",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "String",
                },
              },
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Int",
                },
              },
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Int",
                },
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "d",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "String",
                },
              },
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Int",
                },
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "e",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "String",
                },
              },
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Int",
                },
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "f",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "String",
                },
              },
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Int",
                },
              },
              {
                "_kind": "NullType",
              },
            ],
          },
        },
        {
          "_kind": "FieldDef",
          "leadingComment": null,
          "name": {
            "_kind": "Identifier",
            "name": "g",
          },
          "optional": false,
          "trailingComment": null,
          "type": {
            "_kind": "UnionType",
            "members": [
              {
                "_kind": "NullType",
              },
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "Int",
                },
              },
              {
                "_kind": "TypeRef",
                "asLiveObject": false,
                "ref": {
                  "_kind": "TypeName",
                  "name": "String",
                },
              },
            ],
          },
        },
      ],
      "isStatic": false,
      "leadingComment": null,
      "name": {
        "_kind": "TypeName",
        "name": "Unions",
      },
    },
  ],
}
`;
